# Mnemosyne-CLI

./: .env.example  .gitignore  README.md  SETUP.md  USAGE.md  pyproject.toml  req.txt  tmp_cli_test.py  tmp_inspect.py
.github/: copilot-instructions.md
mnemosyne/: __main__.py  config.py  main.py
mnemosyne/agents/: github_agent.py  orchestrator.py
mnemosyne/ai_rag/: cli.py  debate.py  doc_loader.py  mcp_server.py  rag.py
mnemosyne/display/: __init__.py  banner.py  colors.py  progress.py  status.py
mnemosyne/mcp/: __init__.py  cli_executor_server.py  custom_tools_server.py  filesystem_server.py  git_server.py  github_client.py
tests/: __init__.py  test_mcp_servers.py
