[tool.poetry]
name = "mnemosyne"
version = "0.1.0"
description = "AI Assistant CLI for multi-agent orchestration and memory-driven automation"
authors = ["Surya Narayanaa N T  <suryanarayanaant@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mnemo = "mnemosyne.main:app"

[tool.poetry.dependencies]
python = "^3.12"

# CLI & UI
typer = "^0.17.4"
rich = "^14.1.0"
textual = "^6.1.0"

# LLM / Workflow libs
langchain = "^0.3.27"
langgraph = "^0.6.7"

# RAG & Embeddings
langchain-community = "^0.3.27"
faiss-cpu = "^1.9.0"
pypdf = "^5.1.0"
markdown = "^3.7"

# Gemini LLM + Embeddings
langchain-google-genai = "^2.0.7"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
