[tool.poetry]
name = "mnemosyne"
version = "0.1.0"
description = "AI Assistant CLI for multi-agent orchestration and memory-driven automation"
authors = ["Surya Narayanaa N T  <suryanarayanaant@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mnemo = "mnemosyne.main:app"
mnemo-mcp-cli = "mnemosyne.mcp.cli_executor_server:main"
mnemo-mcp-fs = "mnemosyne.mcp.filesystem_server:main"
mnemo-mcp-git = "mnemosyne.mcp.git_server:main"
mnemo-mcp-custom = "mnemosyne.mcp.custom_tools_server:main"

[tool.poetry.dependencies]
python = "^3.12"

# CLI & UI
typer = "^0.17.4"
rich = "^14.1.0"
textual = "^6.1.0"

# LLM / Workflow libs
langchain = "^0.3.27"
langgraph = "^0.6.7"
fastmcp = "^2.12.3"
mcp = "^1.14.1"
keyring = "^25.4.1"
langchain-openai = "^0.2.11"
langchain-google-genai = "^2.0.5"
langchain-huggingface = "^0.3.1"
sentence-transformers = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"



# RAG & Embeddings
langchain-community = "^0.3.27"
faiss-cpu = "^1.9.0"
pypdf = "^5.1.0"
markdown = "^3.7"

# Gemini LLM + Embeddings
langchain-google-genai = "^2.0.7"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
